2010-07-18  Mike Frysinger  <vapier@gentoo.org>

  * src/apps/jtag/jtag.c (main): Do not abort running just because a user's
    rc file is unparseable (or inaccessible).

2010-06-29  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/generic_usbconn_list.h: Macro away duplicate ftdi lists.

  * src/tap/cable/generic_usbconn.c: Extend help function to include some
    ideas used by the FTDI help (show default vid/pid/driver).  Also add an
    extended help function to show additional help strings so sub-drivers
    need not duplicate this function.
  * src/tap/cable/generic_usbconn.h: Add prototype for new helper function.
  * src/tap/cable/ft2232.c: Switch to new usbconn helper function and export
    the FTDI-specific helper function so external FTDI drivers can use it.
  * src/tap/usbconn/libftdx.h: Add prototype for new FTDI helper function.
  * src/tap/cable/usbblaster.c: Switch to common FTDI helper function and
    drop unused local ftdi code.
  * src/tap/cable/ft2232_list.h: Drop now that ft2232 uses common code which
    only needs the common list of drivers.
  * src/tap/Makefile.am: Drop ft2232_list.h reference.

2010-06-28  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/ice100.c: Drop local help stub and use common libusb one.

  * src/tap/cable/generic_usbconn.h: Split help text out so sub-libusb drivers
    can avoid manual string duplication.
  * src/tap/cable/generic_usbconn.c: Use new libusb help string defines.
  * src/tap/cable/ft2232.c: Likewise.
 
2010-06-24  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Merge libusb-0.x and libusb-1.x variables so that "libusb"
    in the rest of the source tree isn't tied to a specific version.
  * src/tap/cable/ice100.c: Convert API to libusb-1.x.
  * src/tap/cable/jlink.c: Likewise.
  * src/tap/cable/xpc.c: Likewise.
  * src/tap/usbconn/libusb.c: Likewise.
  * src/tap/usbconn/libusb.h: Create a small layer to convert the libusb-1.x